# Snake

./: .gitignore  CMakeLists.txt  README.md
src/: Constants.hpp  Enums.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp  Snake.cpp  Snake.hpp  main.cpp
test_esercizi/: enum_class.cpp
